@@ -18,9 +18,7 @@
 	    location="OAFIID:GNOME_Evolution_Exchange_Component_Factory:@BASE_VERSION@">
 	
 	<oaf_attribute name="repo_ids" type="stringv">
-<!--		<item value="IDL:GNOME/Evolution/Component:@BASE_VERSION@"/> -->
-		<item value="IDL:GNOME/Evolution/Shell:@BASE_VERSION@"/>
-<!--		<item value="IDL:GNOME/Evolution/Shell:@BASE_VERSION@"/> -->
+		<item value="IDL:GNOME/Evolution/Component:@BASE_VERSION@"/>
 	</oaf_attribute>
 <!--
 	<oaf_attribute name="evolution:component_alias" type="string"
